--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ p{
     color: #fff;
 }
 
-#navbar h1{
+#navbar .logo{
     float: left;
     padding-top: 20px;
 }
@@ -165,7 +165,7 @@ p{
 
 /*Home Info*/
 #home-info{
-    height:400px;
+    height:450px;
 }
 
 #home-info .info-img{
